Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8255968/T8255968_1.out
T8255968_1.java:9:25: compiler.err.report.access: T8255968_1_Test(int), private, T8255968_1_Test
1 error
